--- a/views/slides.jade
+++ b/views/slides.jade
@@ -90,6 +90,14 @@ block content
       section
         h1 Diverse Community
       section
+        h1 Precedent
+        h2 cryptocat
+        img(src='/images/cryptocat.png', width='200px')
+        p
+          a(href='https://crypto.cat') https://crypto.cat
+        p
+          a(href='http://www.mailvelope.com/') http://www.mailvelope.com/
+      section
         h2 WebRTC for P2P and encryption
         h2 OTR.js for encryption
         h2 OpenSource for trust
